# training-prep-tools

./: LICENSE  README.md  pylintrc  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pylint.yml  python-package.yml
data/: sample-data-info.md
tests/: test_caption_manager.py  test_process_training_images.py
training_prep_tools/: __init__.py  caption_manager.py  process_training_images.py
