[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "training_prep_tools"
authors = [
    {name = "Aaron Sherman", email = "ajs@ajs.com"},
]
description = "Python tools for managing image model training data"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["AI", "stable diffusion", "training"]
license = {text = "MIT"}
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "Pillow",
    "pyyaml",
]
dynamic = ["version"]

[tool.setuptools]
py-modules = ["training_prep_tools"]

[tool.setuptools.dynamic]
version = {attr = "training_prep_tools.VERSION"}

[project.scripts]
process-training-images = "training_prep_tools.process_training_images:main"
caption-manager = "training_prep_tools.caption_manager:main"
