# setup.cfg file at the root directory
[metadata]
name = training-prep-tools
version = 1.0.0
author = Aaron Sherman
description = Python tools for managing image model training data
long_description = Python tools for managing image model training data
url = https://github.com/ajs/training-prep-tools
keywords = models, training, tools, python, pdf

[options]
python_requires = >=3.8
install_requires =
    numpy
    Pillow

[options.extras_require]
test =
    pytest
